my web page change 2

--- a/web page.html
+++ b/web page.html
@@ -5,14 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <STYle>
-#header 1{
-    background-color=black
-}
+      header{
+
+             color: white;
+             background-color: black;
+             text-align: center;
+             padding-top: 10px;
+      }
+      nav{padding: 10px;
+    color: black;
+background-color: brown;
+text-align: right;}
+
+    #home{background-color: lightslategray;}
+body{background-image: url(./assets/kaliph.png);}
+
     </STYle>
 </head>
 <body>
     <body>
-        <header id="header 1">
+        <header>
             <h1>Welcome to My Web Page</h1>
         </header>
         <nav>
